--- a/DealDouble.Web/Views/Auction/Index.cshtml
+++ b/DealDouble.Web/Views/Auction/Index.cshtml
@@ -40,7 +40,9 @@
                 }
             </tbody>
         </table>
-      
+      <div id="imageTemplate" style="display:none">
+          <img class='image img-thumbnail' style="height:150px; width:150px;"/>
+      </div>
 
     
         <script>
