Add Category in Auction  and Auction Details Slide Show image is daynamically complete show

--- a/DealDouble.Web/Views/Auction/Index.cshtml
+++ b/DealDouble.Web/Views/Auction/Index.cshtml
@@ -15,6 +15,7 @@
             <thead class="bg-info">
                 <tr>
                     <th>Title</th>
+                    <th>Category</th>
                     <th>Description</th>
                     <th>Amount</th>
                     <th>Start Time</th>
@@ -27,6 +28,7 @@
             {
                     <tr>
                         <td>@data.Title</td>
+                        <td>@data.Category.Name</td>
                         <td>@data.Description</td>
                         <td>@data.ActualAmount</td>
                         <td>@data.StartingTime</td>
