--- a/DealDouble.Web/Views/Auction/Create.cshtml
+++ b/DealDouble.Web/Views/Auction/Create.cshtml
@@ -1,4 +1,5 @@
-﻿ <div class="modal-header">
+﻿@model DealDouble.Web.ViewModels.AuctionCrudeViewModel 
+<div class="modal-header">
     <h5 class="modal-title" id="exampleModalLongTitle">Auction Create</h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
@@ -12,11 +13,21 @@
                     <label class="font-weight-bold">Title</label>
                     <input type="text" class="form-control" name="Title" />
                 </div>
+                <div class="col-lg-4">
+                    <label class="font-weight-bold">Category</label>
+                    <select name="CategoryID" class="form-control">
+                        @foreach (var category in Model.Categories)
+                        {
+                            <option value="@category.ID">@category.Name</option>
+                        }
+                    </select>
+                </div>
 
                 <div class="col-lg-4">
                     <label class="font-weight-bold">Description</label>
                     <input type="text" class="form-control" name="Description" />
                 </div>
+
                 <div class="col-lg-4">
                     <label class="font-weight-bold">ActualAmount</label>
                     <input type="number" class="form-control" name="ActualAmount" />
