--- a/DealDouble.Web/Views/Auction/Index.cshtml
+++ b/DealDouble.Web/Views/Auction/Index.cshtml
@@ -6,10 +6,45 @@
 <div class="row">
 
     <div id="listingArea" class="col-lg-12">
+        <div class="row">
+            <h2 class="font-weight-bold float-left">Auctions</h2>
+        </div>
+
         <div class="col-md-12 mt-2">
-          
-                <h2 class="font-weight-bold float-left">Auctions</h2>        
-                <button id="createAuction" class="btn btn-sm btn-success float-right mt-1" data-toggle="modal" data-target="#auctionCreateFrom"><i class="fas fa-plus"></i> Crate New Auction</button>          
+            <div class="row">
+           
+              
+                <div class="col-md-2 float-right">
+                    <label class="font-weight-bold"> Select Rows</label>
+                    <select name="CategoryID" class="form-control">
+                        <option value="10">10</option>
+                        <option value="10">20</option>
+                        <option value="10">30</option>
+                        <option value="10">50</option>
+                        <option value="10">100</option>
+                    </select>
+                </div>
+            
+                <div class="col-md-3 float-right">
+                    <label class="font-weight-bold">Category</label>
+                    <select name="CategoryID" class="form-control">
+                        @foreach (var category in Model.Categories)
+                        {
+                            <option value="@category.ID">@category.Name</option>
+                        }
+                    </select>
+                </div>
+                <div class="col-md-4 float-right">
+                    <label class="font-weight-bold">Search</label>
+                    <input type="search" id="searchText" name="search" class="form-control" value="@Model.SearchTearm" />
+              
+                </div>
+                <div class="col-md-3 float-right mt-4">
+                    <button id="createAuction" class="btn  btn-success float-right mt-1" data-toggle="modal" data-target="#auctionCreateFrom"><i class="fas fa-plus"></i> Crate New Auction</button>
+                </div>
+            </div>
+
+
         </div>
         <table class="table  table-striped table-hover mt-3">
             <thead class="bg-info">
@@ -37,67 +72,126 @@
                             <button class="editButton btn btn-sm btn-primary" data-id="@data.AuctionID" data-toggle="modal" data-target="#auctionCreateFrom"> Edit </button>
                             <button class="deleteButton btn btn-sm btn-danger" data-id="@data.AuctionID"> Delete </button>
                         </td>
-                       
+
                     </tr>
                 }
             </tbody>
         </table>
-      <div id="imageTemplate" style="display:none">
-          <img class='image img-thumbnail' style="height:150px; width:150px;"/>
-      </div>
 
-    
+        <div class="row">
+            <div class="offset-4">
+
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        @if (Model.Pager.CurrentPage > 1)
+                           {
+                            <li class="page-item">
+                                <a class="page-link" href="@Url.Action("Index", "Auction", new { pageNo = Model.Pager.CurrentPage - 1, pageSize = Model.PageSize })" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                        }
+                        @for (var page = Model.Pager.StartPage; page <= Model.Pager.EndPage; page++)
+                        {
+                            var activeClass = Model.Pager.CurrentPage == page ? "active bg-info" : string.Empty;
+                            <li class="page-item @activeClass"><a class="page-link" href="@Url.Action("Index","Auction",new {pageNo = page, pageSize = Model.PageSize })">@page</a></li>
+                        }
+                        @if (Model.Pager.CurrentPage < Model.Pager.TotalPages)
+                        {
+                            <li class="page-item">
+                                <a class="page-link" href="@Url.Action("Index", "Auction", new { pageNo = Model.Pager.CurrentPage + 1, pageSize = Model.PageSize })" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        }
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+
+
+
+        <div id="imageTemplate" style="display:none">
+            <img class='image img-thumbnail' style="height:150px; width:150px;" />
+        </div>
+
+
         <script>
-    $("#createAuction").click(function () {
-        $.ajax({
-            metod: "Get",
-            url: "@Url.Action("Create", "Auction")",
-        }).done(function (response) {
-            $("#contentArea").html(response);
-            $("#auctionCreateFrom").modal('toggle');
-        }).fail(function (xhr, ajaxOptions, thrownError) {
-            alert(xhr.status);
-            alert(thrownError);
-        })
+            function AttachNewImage(imageURL, imageID) {
+                var $newHtml = $("#imageTemplate").clone();
+                $newHtml.find(".image").attr("src", "/Content/images/" + imageURL);
+                $newHtml.find(".image").attr("data-id", imageID);
+                $("#pictuerArea").append($newHtml.html());
+                $("#pictuerArea .image").click(function () {
 
-    });
+                    $(this).remove();
+                })
+            }
+            $("#createAuction").click(function () {
+                $.ajax({
+                    metod: "Get",
+                    url: "@Url.Action("Create", "Auction")",
+                }).done(function (response) {
+                    $("#contentArea").html(response);
+                    $("#auctionCreateFrom").modal('toggle');
+                }).fail(function (xhr, ajaxOptions, thrownError) {
+                    alert(xhr.status);
+                    alert(thrownError);
+                })
 
-        $(".editButton").click(function () {
-            var dataId = $(this).attr("data-id")
-            $.ajax({
-                method: 'Get',
-                url: '@Url.Action("Edit","Auction")',
-                data: { id : dataId }
-            }).done(function (response) {
-                $("#contentArea").html(response);
-                $("#auctionCreateFrom").modal('toggle');
-            }).fail(function (xhr, ajaxOptions, thrownError) {
-                alert(xhr.status);
-                alert(thrownError);
             });
-        })
-        $(".deleteButton").click(function () {
 
-            var dataId = $(this).attr("data-id")
-            if (confirm("Are you sure to delete this Auction !!")) {
+            $("#createAuction").click(function () {
+                $.ajax({
+                    metod: "Get",
+                    url: "@Url.Action("Create", "Auction")",
+                }).done(function (response) {
+                    $("#contentArea").html(response);
+                    $("#auctionCreateFrom").modal('toggle');
+                }).fail(function (xhr, ajaxOptions, thrownError) {
+                    alert(xhr.status);
+                    alert(thrownError);
+                })
+
+            });
+
+            $(".editButton").click(function () {
+                var dataId = $(this).attr("data-id")
                 $.ajax({
                     method: 'Get',
-                    url: '@Url.Action("Delete","Auction")',
+                    url: '@Url.Action("Edit","Auction")',
                     data: { id: dataId }
                 }).done(function (response) {
-                    alert("Data Delete Successfully")
-                    $("#listingArea").html(response);
-
+                    $("#contentArea").html(response);
+                    $("#auctionCreateFrom").modal('toggle');
                 }).fail(function (xhr, ajaxOptions, thrownError) {
                     alert(xhr.status);
                     alert(thrownError);
                 });
-            }
-        })
+            })
+            $(".deleteButton").click(function () {
+
+                var dataId = $(this).attr("data-id")
+                if (confirm("Are you sure to delete this Auction !!")) {
+                    $.ajax({
+                        method: 'Get',
+                        url: '@Url.Action("Delete","Auction")',
+                        data: { id: dataId }
+                    }).done(function (response) {
+                        alert("Data Delete Successfully")
+                        $("#listingArea").html(response);
+
+                    }).fail(function (xhr, ajaxOptions, thrownError) {
+                        alert(xhr.status);
+                        alert(thrownError);
+                    });
+                }
+            })
         </script>
     </div>
 </div>
-  <!-- Modal -->
+<!-- Modal -->
 <div class="modal fade bd-example-modal-xl" id="auctionCreateFrom" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-xl">
         <div class="modal-content" id="contentArea">
