--- a/DealDouble.Web/Views/Shared/_Layout.cshtml
+++ b/DealDouble.Web/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <!-- Custom styles for this template -->
     <link href="~/Content/css/shop-homepage.css" rel="stylesheet">
     <script src="~/Content/vendor/jquery/jquery.min.js"></script>
+    <script src="~/Content/vendor/jquery/jquery.validate.min.js"></script>
 
 </head>
 <body>
