--- a/DealDouble.Web/Views/Shared/_Layout.cshtml
+++ b/DealDouble.Web/Views/Shared/_Layout.cshtml
@@ -1,14 +1,14 @@
-﻿@model DealDouble.Web.ViewModels.PageViewModel
+﻿@*@model DealDouble.Web.ViewModels.PageViewModel*@
 <!DOCTYPE html>
 <html>
 <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="@Model.PageDescription">
+    @*<meta name="description" content="@Model.PageDescription">
     <meta name="author" content="somrat">
 
-    <title>@Model.PageTitle - DealDouble </title>
+    <title>@Model.PageTitle - DealDouble </title>*@
 
     <!-- Bootstrap core CSS -->
     <link href="~/Content/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
